--- a/index.html
+++ b/index.html
@@ -3,10 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <title>Moose web-site</title>
 </head>
 <body>
-    dfdfdf
-    
+<div class="container grid">
+    <div class="empty">onetwothree</div>
+    <div class="logo">four five six</div>
+</div>
+
 </body>
 </html>
+
+<!--
+<div class="logo">four five six</div>
+<div class="contacts">seven eight</div>
+<div class="freemenu">nine ten</div>
+<div class="nav">eleven</div>
+<div class="socials">twelve</div>
+<div class="slider">777</div>-->
