--- a/index.html
+++ b/index.html
@@ -7,10 +7,25 @@
     <title>Moose web-site</title>
 </head>
 <body>
-<div class="container grid">
-    <div class="empty">onetwothree</div>
-    <div class="logo">four five six</div>
-</div>
+    <div class="grid-container">
+        <div class="header">Moose</div>
+        <div class="contacts"><img src="img/tel.png"> <a href="tel:8-953-964-57-57">8-953-964-57-57</a> <img class="letter" src="img/letter.png"> em@il: bla-bla@mail.ru</div>
+        <div class="nav grid">
+        <div class="buttons">
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Portfolio</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Service</a></li>
+                <li><a href="#">Journal</a></li>
+                <li><a href="#">Features</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </div>
+        </div>
+        <div class="footer">Footer</div>
+        <div class="main">main</div>
+    </div>
 
 </body>
 </html>
