--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
         </div>
         </div>
         <div class="footer">Footer</div>
-        <div class="main">main</div>
+        <div class="slider grid"><div>
+                <span>Moose bring awesomness</span><br>
+                <span>A responsive template with clean and professional design</span></div>
+        </div>
     </div>
 
 </body>
