header-slider - good, without socails

--- a/index.html
+++ b/index.html
@@ -11,22 +11,26 @@
         <div class="header">Moose</div>
         <div class="contacts"><img src="img/tel.png"> <a href="tel:8-953-964-57-57">8-953-964-57-57</a> <img class="letter" src="img/letter.png"> em@il: bla-bla@mail.ru</div>
         <div class="nav grid">
-        <div class="buttons">
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Portfolio</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Service</a></li>
-                <li><a href="#">Journal</a></li>
-                <li><a href="#">Features</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
-        </div>
+            <div class="buttons">
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Portfolio</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Service</a></li>
+                    <li><a href="#">Journal</a></li>
+                    <li><a href="#">Features</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </div>
+            <div class="socials">
+                1 2 3 4
+            </div>
         </div>
         <div class="footer">Footer</div>
-        <div class="slider grid"><div>
-                <span>Moose bring awesomness</span><br>
-                <span>A responsive template with clean and professional design</span></div>
+        <div class="slider grid">
+                <div><span class="head-content">Moose brings awesomness</span></div><br>
+                <div><span class="head-content">A responsive template with clean and professional design</span></div><br>
+                <div><input type="button" value="see project" onclick="#"> </div>
         </div>
     </div>
 
