header-slider - ready 100%

--- a/index.html
+++ b/index.html
@@ -23,7 +23,12 @@
                 </ul>
             </div>
             <div class="socials">
-                1 2 3 4
+                <ul>
+                    <li><a href="#"><img src="img/rss.png"></a></li>
+                    <li><a href="#"><img src="img/faceb.png"></a></li>
+                    <li><a href="#"><img src="img/twit.png"></a></li>
+                    <li><a href="#"><img src="img/drible.png"></a></li>
+                </ul>
             </div>
         </div>
         <div class="footer">Footer</div>
