header-slider - ready 100%

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="slider grid">
                 <div><span class="head-content">Moose brings awesomness</span></div><br>
                 <div><span class="head-content">A responsive template with clean and professional design</span></div><br>
-                <div><input type="button" value="see project" onclick="#"> </div>
+                <div><input type="button" value="see project" onclick=""> </div>
         </div>
     </div>
 
