--- a/index.html
+++ b/index.html
@@ -31,12 +31,19 @@
                 </ul>
             </div>
         </div>
-        <div class="footer">Footer</div>
         <div class="slider grid">
-                <div><span class="head-content">Moose brings awesomness</span></div><br>
+                <div><span class="h1 head-content">Moose brings awesomness</span></div><br>
                 <div><span class="head-content">A responsive template with clean and professional design</span></div><br>
                 <div><input type="button" value="see project" onclick=""> </div>
         </div>
+        <div class="slogan">
+            <h2><span>Creativity</span> is !important for us</h2>
+            <span> Nullam id dolor id nibh ultricies vehicula ut id elit. Maeceas sed diam eget risus
+            varius blandit sit amet non magna. Duis mollis, est non commodo luctus, nisi erat porttitor
+            legula ege lacinia odio nec elit.
+            </span>
+        </div>
+        <div class="footer">Footer</div>
     </div>
 
 </body>
