--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
             </span>
         </div>
         <div class="footer">Footer</div>
+        <div class="emptygray"></div>
     </div>
 
 </body>
