--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="grid-container">
         <div class="header">Moose</div>
-        <div class="contacts"><img src="img/tel.png"> <a href="tel:8-953-964-57-57">8-953-964-57-57</a> <img class="letter" src="img/letter.png"> em@il: bla-bla@mail.ru</div>
+        <div class="contacts"><img alt="" src="img/tel.png"> <a href="tel:8-953-964-57-57">8-953-964-57-57</a> <img alt="" class="letter" src="img/letter.png"> em@il: bla-bla@mail.ru</div>
         <div class="nav grid">
             <div class="buttons">
                 <ul>
@@ -24,10 +24,10 @@
             </div>
             <div class="socials">
                 <ul>
-                    <li><a href="#"><img src="img/rss.png"></a></li>
-                    <li><a href="#"><img src="img/faceb.png"></a></li>
-                    <li><a href="#"><img src="img/twit.png"></a></li>
-                    <li><a href="#"><img src="img/drible.png"></a></li>
+                    <li><a href="#"><img alt="" src="img/rss.png"></a></li>
+                    <li><a href="#"><img alt="" src="img/faceb.png"></a></li>
+                    <li><a href="#"><img alt="" src="img/twit.png"></a></li>
+                    <li><a href="#"><img alt="" src="img/drible.png"></a></li>
                 </ul>
             </div>
         </div>
@@ -36,6 +36,8 @@
                 <div><span class="head-content">A responsive template with clean and professional design</span></div><br>
                 <div><input type="button" value="see project" onclick=""> </div>
         </div>
+    </div>    
+    <div class="second-container">    
         <div class="slogan">
             <h2><span>Creativity</span> is !important for us</h2>
             <span> Nullam id dolor id nibh ultricies vehicula ut id elit. Maeceas sed diam eget risus
@@ -43,8 +45,13 @@
             legula ege lacinia odio nec elit.
             </span>
         </div>
+        <div class="services grid">
+            <div><a href="#"><img alt="" src="img/laptop.png"><br>1</a></div>
+            <div><a href="#"><img alt="" src="img/motion.png"><br>2</a></div>
+            <div><a href="#"><img alt="" src="img/photo.png"><br>3</a></div>
+            <div><a href="#"><img alt="" src="img/illustr.png"><br>4</a></div>
+        </div>
         <div class="footer">Footer</div>
-        <div class="emptygray"></div>
     </div>
 
 </body>
