services is ready

--- a/index.html
+++ b/index.html
@@ -46,10 +46,14 @@
             </span>
         </div>
         <div class="services grid">
-            <div><a href="#"><img alt="" src="img/laptop.png"><br>1</a></div>
-            <div><a href="#"><img alt="" src="img/motion.png"><br>2</a></div>
-            <div><a href="#"><img alt="" src="img/photo.png"><br>3</a></div>
-            <div><a href="#"><img alt="" src="img/illustr.png"><br>4</a></div>
+            <div><a href="#"><img class="toCenter" alt="" src="img/pointer.png"><img alt="" 
+                src="img/laptop.png"><br>interface design</a></div>
+            <div><a href="#"><img class="toCenter" alt="" src="img/pointer.png"><img alt="" 
+                src="img/motion.png"><br>motion graphic</a></div>
+            <div><a href="#"><img class="toCenter" alt="" src="img/pointer.png"><img alt="" 
+                src="img/photo.png"><br>photography</a></div>
+            <div><a href="#"><img class="toCenter" alt="" src="img/pointer.png"><img alt="" 
+                src="img/illustr.png"><br>illustration</a></div>
         </div>
         <div class="footer">Footer</div>
     </div>
