-bags: hide not all illustration elems; +imgView

--- a/index.html
+++ b/index.html
@@ -72,18 +72,18 @@
             </ul>
         </div>
         <div class="thumbnails grid">
-            <div tabindex="0" alt="graphics" title="graphics" id="tmb1" class="graphics"></div>
-            <div tabindex="0" alt="web design" title="web design" id="tmb2" class="web"></div>
-            <div tabindex="0" alt="graphics" title="graphics" id="tmb3" class="graphics"></div>
-            <div tabindex="0" alt="graphics" title="graphics" id="tmb4" class="graphics"></div>
-            <div tabindex="0" alt="illustration" title="illustration" id="tmb5" class="illustration"></div>
-            <div tabindex="0" alt="illustration" title="illustration" id="tmb6" class="illustration"></div>
-            <div tabindex="0" alt="web design" title="web design" id="tmb7" class="web"></div>
-            <div tabindex="0" alt="video" title="video" id="tmb8" class="video"></div>
-            <div tabindex="0" alt="video" title="video" id="tmb9" class="video"></div>
-            <div tabindex="0" alt="video" title="video" id="tmb10" class="video"></div>
-            <div tabindex="0" alt="audio" title="audio" id="tmb11" class="audio"></div>
-            <div tabindex="0" alt="audio" title="audio"id="tmb12" class="audio"></div>    
+            <div tabindex="0" alt="graphics" title="graphics" id="tmb1" onclick="imageViewer(this.id)" class="graphics"></div>
+            <div tabindex="0" alt="web design" title="web design" id="tmb2" onclick="imageViewer(this.id)" class="web"></div>
+            <div tabindex="0" alt="graphics" title="graphics" id="tmb3" onclick="imageViewer(this.id)" class="graphics"></div>
+            <div tabindex="0" alt="graphics" title="graphics" id="tmb4" onclick="imageViewer(this.id)" class="graphics"></div>
+            <div tabindex="0" alt="illustration" title="illustration" id="tmb5" onclick="imageViewer(this.id)" class="illustration"></div>
+            <div tabindex="0" alt="illustration" title="illustration" id="tmb6" onclick="imageViewer(this.id)" class="illustration"></div>
+            <div tabindex="0" alt="web design" title="web design" id="tmb7" onclick="imageViewer(this.id)" class="web"></div>
+            <div tabindex="0" alt="video" title="video" id="tmb8" onclick="imageViewer(this.id)" class="video"></div>
+            <div tabindex="0" alt="video" title="video" id="tmb9" onclick="imageViewer(this.id)" class="video"></div>
+            <div tabindex="0" alt="video" title="video" id="tmb10" onclick="imageViewer(this.id)" class="video"></div>
+            <div tabindex="0" alt="audio" title="audio" id="tmb11" onclick="imageViewer(this.id)" class="audio"></div>
+            <div tabindex="0" alt="audio" title="audio"id="tmb12" onclick="imageViewer(this.id)" class="audio"></div>    
         </div>
     </div>
     <div class="blog grid">
