--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     </div>
     <div class="portfolio grid">
         <div class="latest">
-            <a name="projects"></a><span>Latest projects</span> | making stuff is awesome
+            <a name="projects"></a><h2>Latest projects</h2> | making stuff is awesome
         </div>
         <div class="filter">
             <ul> <!--.graphics .web .illustation .audio .video--> 
@@ -87,16 +87,41 @@
         </div>
     </div>
     <div class="blog grid">
-        <div class="blog-content">
-
+        <div class="blog-content latest">
+            <h2>Our latest blog</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris ullamcorper metus a elit ultricies hendrerit. Donec a interdum lorem.
         </div>
-        <div class="blog-slider">
-
+        <div class="blogSlider">
+            <div alt="prev" title="prev" class="prev btn"><span>&lt;</span></div>
+            <div alt="next" title="next" class="next btn"><span>&gt;</span></div>
+            <div class="blogSlider__wrap">
+                <div id="slide" class="blogSlider__item"><img alt="" src="img/slide1.png">
+                    <h3>Tortor ullamcorper fringilla euismod</h3>
+                    <p>20 dec 2020 | Macro, photography</p>
+                </div>
+                <div class="blogSlider__item"><img alt="" src="img/slide2.png">
+                    <h3>Tortor ullamcorper fringilla euismod</h3>
+                    <p>20 dec 2020 | Macro, photography</p>
+                </div>
+                <div class="blogSlider__item"><img alt="" src="img/slide3.png">
+                    <h3>Tortor ullamcorper fringilla euismod</h3>
+                    <p>20 dec 2020 | Macro, photography</p>
+                </div>
+                <div class="blogSlider__item"><img alt="" src="img/slide4.png">
+                    <h3>Tortor ullamcorper fringilla euismod</h3>
+                    <p>20 dec 2020 | Macro, photography</p>
+                </div>
+                <div class="blogSlider__item"><img alt="" src="img/slide5.jpg">
+                    <h3>Tortor ullamcorper fringilla euismod</h3>
+                    <p>20 dec 2020 | Macro, photography</p>
+                </div>
+            </div>
         </div>
         <div class="blog-button">
-
+            456
         </div>
     </div>
     <script>hide("0");</script>
+    <script>blogSlider()</script>
 </body>
 </html>
