slider-ok; footer-ok

--- a/index.html
+++ b/index.html
@@ -118,7 +118,34 @@
             </div>
         </div>
         <div class="blog-button">
-            456
+        </div>
+    </div>
+    <div class="footer grid">
+        <div class="touch">
+            <h3>Get in touch</h3>
+            <p>Fusce aliquet pede non pede. Suspendisse dapibus lorem pellentesque magna. Integer nulla.
+            Donec blandit feugiat ligula.</p><br><p>Nunc viverra imperdiet enim. Fusce est. Vivamus a tellus.</p>
+        </div>
+        <div class="twitter">
+            <h3>Twitter</h3>
+            <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p><br> 
+            <p>Proin pharetra nonummy pede.</p><br><p>Mauris et orci.</p>
+        </div>
+        <div class="popular">
+            <h3>Popular posts</h3>
+        <p>Aenean nec lorem. In porttitor. Donec laoreet nonummy augue.</p><br>
+        <p>Suspendisse dui purus, scelerisque at, vulputate vitae, pretium mattis, nunc.</p><br><p>Mauris eget neque 
+        at sem venenatis eleifend. Ut nonummy.</p>          
+        </div>
+        <div class="about">
+            <h3>About us</h3>
+        <p>Fusce aliquet pede non pede. Suspendisse dapibus lorem pellentesque magna.</p> <br> <p>Integer nulla.
+        Donec blandit feugiat ligula. Donec hendrerit, felis et imperdiet euismod, purus ipsum pretium metus, in lacinia nulla nisl eget sapien. </p>
+
+        </div>
+        <div class="emptycopy"></div>
+        <div class="copyright">
+            &copy; 2020 Moose. All rights reserved. Theme by Ya.
         </div>
     </div>
     <script>hide("0");</script>
