--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 <script src="script.js"></script>
 </head>
 <body>
+    <input type="checkbox" id="nav-toggle" hidden>
     <div class="grid-container">
+        <div class="mmenu"><label for="nav-toggle" class="nav-toggle" onclick>&#9776;</label></div>
         <div class="header">Moose</div>
         <div class="contacts"><img alt="" src="img/tel.png"> <a href="tel:8-953-964-57-57">8-953-964-57-57</a><br><img alt="" class="letter" src="img/letter.png"> em@il: bla-bla@mail.ru</div>
         <div class="nav grid">
@@ -37,8 +39,21 @@
                 <div><span class="head-content">A responsive template with clean and professional design</span></div>
                 <div><input type="button" value="see project" onclick="window.location.href='#projects'"> </div>
         </div>
-    </div>    
-    <div class="second-container">    
+    </div>
+
+    <div class="sidemenu">
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Portfolio</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Service</a></li>
+            <li><a href="#">Journal</a></li>
+            <li><a href="#">Features</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
+    </div>     
+    <div class="second-container">
+           
         <div class="slogan">
             <h2><span>Creativity</span> is !important for us</h2>
             <span> Nullam id dolor id nibh ultricies vehicula ut id elit. Maeceas sed diam eget risus
